# cxr-consistency

./: .gitignore  AGENTS.md  README.md  RECOVERY.md  pyproject.toml  requirements.txt
configs/: best_found.yaml  coursework_baseline.yaml  deit_small_hard.yaml  diag_A_lr3e5.yaml  diag_B_lr1e5.yaml  diag_B_lr3e5.yaml  diag_B_lr5e5.yaml  diag_C_lr3e5.yaml  diag_distorted_negation.yaml  diag_pathology_matched.yaml  diag_random.yaml  diag_view_matched.yaml  fast_debug.yaml  hard_pairs_convnext.yaml  hard_pairs_vit.yaml  harder_pairs.yaml  local_baseline.yaml  overfit_tiny.yaml  vit_base_hard.yaml  vit_base_nocollapse.yaml  vit_small_hard.yaml
configs/checkpoint_full/: convnext_tiny_cxrbert_baseline_full_checkpoint_bs64.yaml  convnext_tiny_cxrbert_baseline_full_checkpoint_bs80.yaml  (+1 more)
demo_streamlit/: README.md  app.py  data_browser.py  gradcam.py  inference.py  negative_pairs.py  paths.py  report_diff.py  text_attribution.py
results/: final_full_review.md  final_visual_encoder_selection.md
results/final_full/: README.md
scripts/: 01_download_and_merge.py  02_prepare_task_dataset.py  03_make_hard_pairs.py  03_make_pairs.py  04_train.py  audit_checkpoint_full.py  audit_final_full.py  audit_finalists.py  audit_sweep_results.py  audit_text_encoder_sweep.py  audit_text_sweep_compact.py  check_pipeline.py  collect_experiment_results.py  export_checkpoint_full.py  plot_experiment_results.py  run_checkpoint_full.py  run_final_full.py  run_finalists.py  run_full_pipeline.sh  run_parallel_experiments.py  run_sweep_a6000.py  run_text_encoder_sweep.py  run_text_sweep_compact.py
(+60 files in other folders)
